fix broken styles of header

--- a/views/styles/header-footer.css
+++ b/views/styles/header-footer.css
@@ -23,8 +23,10 @@ header::after {
 }
 
 #header-content-wrapper {
-  display   : flex;
-  max-width : 100px;
+  display     : flex;
+  align-items : center;
+  max-width   : 1000px;
+  margin      : auto;
 }
 
 /* #header-content-wrapper */ #logo {
